public-api/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: public-api
  namespace: public-stage

spec:
  replicas: 1

  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      name: public-api
      labels:
        app: public-api
    spec:
      #imagePullSecrets:
       # - name: regcred
      containers:
      - name: public-api
        image: jcalderon/public:1.0.0
        # imagePullPolicy: Always

        ports:
        - containerPort: 3000
          name: public-api
        resources:
          limits:
            cpu: 20m
            memory: 200Mi
          requests:
            cpu: 10m
            memory: 50Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
