public-api/build_stage.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    note: This is an Stage deployment
  labels:
    app: public-api-stage
    team: devops
  name: public-stage
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    note: This is an Stage deployment
  labels:
    app: public-api-stage
    team: devops
  name: svc-public-api
  namespace: public-stage
spec:
  ports:
  - name: public-api
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: public-api-stage
    team: devops
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    note: This is an Stage deployment
  labels:
    app: public-api-stage
    team: devops
  name: public-api
  namespace: public-stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-api-stage
      team: devops
  template:
    metadata:
      annotations:
        note: This is an Stage deployment
      labels:
        app: public-api-stage
        team: devops
      name: public-api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: cm-private-api
        image: jcalderon/public:1.0.0
        name: public-api
        ports:
        - containerPort: 3000
          name: public-api
        resources:
          limits:
            cpu: 20m
            memory: 200Mi
          requests:
            cpu: 10m
            memory: 50Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    note: This is an Stage deployment
  labels:
    app: public-api-stage
    team: devops
  name: public-api
  namespace: public-stage
spec:
  rules:
  - host: KUSTYOMIZE-DEFINIED
    http:
      paths:
      - backend:
          service:
            name: svc-public-api
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: svc-public-api
            port:
              number: 3000
        path: /graphql
        pathType: Prefix
